//   Copyright 2013 Vastech SA (PTY) LTD
//
//   Licensed under the Apache License, Version 2.0 (the "License");
//   you may not use this file except in compliance with the License.
//   You may obtain a copy of the License at
//
//       http://www.apache.org/licenses/LICENSE-2.0
//
//   Unless required by applicable law or agreed to in writing, software
//   distributed under the License is distributed on an "AS IS" BASIS,
//   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
//   See the License for the specific language governing permissions and
//   limitations under the License.

package messages;

option java_package = "com.github.jsgilmore.protoshell";
option java_outer_classname = "ShellMessages";

message TaskComponentMapping {
	optional string Task = 1;
	optional string Component = 2;
}

message Topology {
	optional int64 TaskId = 1;
	repeated TaskComponentMapping TaskComponentMappings = 2;
}

message Conf {
	optional string Key = 1;
	optional string Value = 2;
}

message Context {
	optional string PidDir = 1;
	optional Topology Topology = 2;
	repeated Conf Confs = 3;
}

message Pid {
	optional int32 Pid = 1;
}

message BoltMsgMeta {
	optional string Id = 1;
	optional string Comp = 2;
	optional string Stream = 3;
	optional int64 Task = 4;
}

message BoltMsgProto {
	optional BoltMsgMeta BoltMsgMeta = 1;
	repeated bytes Contents = 2;
}

message TaskIds {
	repeated int32 TaskIds = 1;
}

message SpoutMsg {
	optional string Command = 1;
	optional string Id = 2;
}

message ShellMsgMeta {
	optional string Command = 1;
	optional string Id = 2;
	repeated string Anchors = 3;
	optional string Stream = 4;
	optional int64  Task = 5;
	optional bool   NeedTaskIds = 6;
	optional string Msg = 7;
}

message ShellMsgProto {
	optional ShellMsgMeta ShellMsgMeta = 1;
	repeated bytes Contents = 2;
}

message Test {
	optional string Name = 1;
	optional int32 Number = 2;
	optional bytes Data = 3;
}